--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ python = ">=3.8,<3.11"
 click = "^8.0.1"
 rich = "^12.5.1"
 PyYAML = "^6.0.0"
-yadism = { extras = ["box"], version = "^0.12.0" }
+yadism = { extras = ["box"], version = "^0.12.3" }
 pandas = "^1.3.0"
 lz4 = "^4.0.2"
 pkgconfig = "^1.5.5"
@@ -42,8 +42,7 @@ tomli = "^2.0.1"
 Sphinx = { version = "^4.2.0", optional = true }
 sphinx-rtd-theme = { version = "^1.0.0", optional = true }
 sphinxcontrib-bibtex = { version = "^2.4.1", optional = true }
-eko = { extras = ["box"], version = "^0.11.1" }
-
+eko = { extras = ["box"], version = "^0.12.0" }
 
 [tool.poetry.group.docs]
 optional = true
@@ -68,7 +67,6 @@ optional = true
 pdbpp = "^0.10.3"
 ipython = "^8.0"
 
-
 [tool.poetry.scripts]
 pinefarm = "pinefarm:command"
 
@@ -82,7 +80,7 @@ dirty = true
 files = ["pinefarm/__init__.py"]
 
 [tool.poe.tasks]
-test = "pytest tests"
+test = "pytest"
 coverage = "$BROWSER htmlcov/index.html"
 test-cov = ["test", "coverage"]
 lint = "pylint pinefarm -E"
