--- a/.github/workflows/generators.yml
+++ b/.github/workflows/generators.yml
@@ -23,3 +23,12 @@ jobs:
       - name: Install project
         run: |
           poetry install --no-interaction
+      - name: Get pinecards
+        run: |
+          cd examples && git clone git@github.com:NNPDF/pinecards.git
+      - name: Execute all generators
+        run: |
+          # positivity
+          pinefarm run NNPDF_POS_F2U_40 .github/bench_data/401.yaml
+          # yadism
+          # pinefarm run HERA_CC_318GEV_EM_SIGMARED .github/bench_data/401.yaml
