Shuffle bench data around

--- a/.github/workflows/generators.yml
+++ b/.github/workflows/generators.yml
@@ -24,17 +24,18 @@ jobs:
         run: |
           poetry install --no-interaction
       - name: Get pinecards
+        uses: actions/checkout@v2
+        with:
+          repository: pinecards
+      - name: Overwrite config
         run: |
-          cd examples
-          # https://github.com/actions/checkout/issues/24
-          git config --global url.https://github.com/.insteadOf git://github.com/
-          git clone https://github.com/NNPDF/pinecards.git
+          cp benchmarks/data/pinefarm.toml .
       - name: Execute all generators
         run: |
           ls -l examples
           ls -l examples/pinecards
           python -c "import pathlib; from pinefarm import configs,info; configs.configs = {'paths':{'runcards': pathlib.Path('../pinecards')}}; print(info.label('NNPDF_POS_F2U_40'))"
           # positivity
-          pinefarm run NNPDF_POS_F2U_40 .github/bench_data/401.yaml
+          pinefarm run NNPDF_POS_F2U_40 benchmarks/data/401.yaml
           # yadism
           # pinefarm run HERA_CC_318GEV_EM_SIGMARED .github/bench_data/401.yaml
