--- a/pinefarm.toml
+++ b/pinefarm.toml
@@ -7,7 +7,7 @@
 
 [paths]
 # paths relative to the location of this file
-runcards = "examples"
+runcards = "pinecards"
 results = "results"
 # theories = "theories"
 # prefix = ".prefix"
