--- a/.github/workflows/generators.yml
+++ b/.github/workflows/generators.yml
@@ -29,9 +29,8 @@ jobs:
           repository: NNPDF/pinecards
       - name: Execute all generators
         run: |
-          ls -l examples
-          ls -l examples/pinecards
-          python -c "import pathlib; from pinefarm import configs,info; configs.configs = {'paths':{'runcards': pathlib.Path('../pinecards')}}; print(info.label('NNPDF_POS_F2U_40'))"
+          ls pinecards
+          python -c "import pathlib; from pinefarm import configs,info; configs.configs = {'paths':{'runcards': pathlib.Path('./pinecards')}}; print(info.label('NNPDF_POS_F2U_40'))"
           # positivity
           pinefarm run NNPDF_POS_F2U_40 benchmarks/data/401.yaml
           # yadism
