--- a/.github/workflows/generators.yml
+++ b/.github/workflows/generators.yml
@@ -27,9 +27,14 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: NNPDF/pinecards
+          path: examples/
       - name: Execute all generators
         run: |
-          mv pinecards/* examples/
+          ls -l
+          ls -l examples/
+          ls -l examples/pinecards
+          ls -l pinecards/
+          mv examples/pinecards/* examples/
           # positivity
           pinefarm run NNPDF_POS_F2U_40 benchmarks/data/401.yaml
           # yadism
