--- a/.github/workflows/generators.yml
+++ b/.github/workflows/generators.yml
@@ -29,7 +29,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: NNPDF/pinecards
-          # path: pinefarm/examples/
+          path: examples/
       - name: Execute all generators
         run: |
           ls -l
