--- a/.github/workflows/generators.yml
+++ b/.github/workflows/generators.yml
@@ -22,6 +22,9 @@ jobs:
         with:
           virtualenvs-create: false
           installer-parallel: true
+      - name: Install non-Python dependencies
+        run: |
+          sudo apt install pkg-config
       - name: Install project
         run: |
           poetry install --no-interaction
