Apt update before installing

--- a/.github/workflows/generators.yml
+++ b/.github/workflows/generators.yml
@@ -24,6 +24,7 @@ jobs:
           installer-parallel: true
       - name: Install non-Python dependencies
         run: |
+          apt update
           apt install -y pkg-config
       - name: Install project
         run: |
