Install LHAPDF index
Most likely it is missing in the container, because it should not be used, so it has not been copied, but not installed by pinefarm, since lhapdf has been found

--- a/.github/workflows/generators.yml
+++ b/.github/workflows/generators.yml
@@ -34,6 +34,9 @@ jobs:
         with:
           repository: NNPDF/pinecards
           path: examples/
+      - name: Set up PDFs storage
+        run: |
+          lhapdf update
       - name: Execute all generators
         run: |
           # positivity
