--- a/.github/workflows/generators.yml
+++ b/.github/workflows/generators.yml
@@ -38,8 +38,9 @@ jobs:
         run: |
           lhapdf update
       - name: Execute all generators
+        env:
+          LHAPDF_DATA_PATH: /usr/local/share/LHAPDF/
         run: |
-          export LHAPDF_DATA_PATH=/usr/local/share/LHAPDF/
           # positivity
           pinefarm run NNPDF_POS_F2U_40 benchmarks/data/401.yaml
           # yadism
