--- a/.github/workflows/generators.yml
+++ b/.github/workflows/generators.yml
@@ -36,11 +36,20 @@ jobs:
           path: examples/
       - name: Set up PDFs storage
         run: |
+          lhapdf --help
+          lhapdf-config --help
+          lhapdf-config --datadir
+          lhapdf-config --prefix
+          ls $(lhapdf-config --datadir)
           lhapdf update
+          ls $(lhapdf-config --datadir)
       - name: Execute all generators
         env:
           LHAPDF_DATA_PATH: /usr/local/share/LHAPDF/
         run: |
+          echo "$LHAPDF_DATA_PATH"
+          python -c "import os; print(os.environ)"
+          ls /usr/local/share
           # positivity
           pinefarm run NNPDF_POS_F2U_40 benchmarks/data/401.yaml
           # yadism
