--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -22,8 +22,8 @@ sphinx:
   configuration: docs/source/conf.py
 
 # Optionally build your docs in additional formats such as PDF
-# formats:
-# - pdf
+formats:
+- pdf
 
 # Optionally set requirements required to build your docs
 # python:
