--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ yadism = { extras = ["box"], version = "^0.12.4" }
 pandas = "^1.3.0"
 lz4 = "^4.0.2"
 pkgconfig = "^1.5.5"
-pygit2 = "1.9.2"
+pygit2 = "^1.12.0"
 requests = "^2.26.0"
 lhapdf-management = "^0.3"
 pineappl = "^0.6.0"
