--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -7,6 +7,6 @@ on:
 
 jobs:
   publish:
-    uses: N3PDF/workflows/.github/workflows/python-poetry-pypi.yml@v2
+    uses: NNPDF/workflows/.github/workflows/python-poetry-pypi.yml@v2
     secrets:
       PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
