--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,8 +18,8 @@ repository = "https://github.com/NNPDF/runcards"
 packages = [{ include = "pinefarm", from = "src" }]
 
 [build-system]
-requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
-build-backend = "poetry.core.masonry.api"
+requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.1.0"]
+build-backend = "poetry_dynamic_versioning.backend"
 
 [tool.poetry.dependencies]
 python = "^3.9"
@@ -36,15 +36,16 @@ pineappl = "^0.7.2"
 more-itertools = "^8.10.0"
 appdirs = "^1.4.4"
 tomli = "^2.0.1"
-#yadism is currently incompatible with pineappl > 0.7
-#yadism = { extras = ["box"], version = "^0.13.2", optional=true, markers = "python_version < '3.13'" }
+yadism = { extras = ["box"], version = "^0.13.3", optional=true, markers = "python_version < '3.13'" }
 eko = { extras = ["box"], version = "^0.14.2", optional=true, markers = "python_version < '3.13'" }
 nnpdf = { git = "https://github.com/NNPDF/nnpdf", optional = true, markers = "python_version > '3.8'" }
 
 [tool.poetry.extras]
-#dis = ["yadism"]
+dis = ["yadism"]
 vrap = ["eko"]
 nnpdf = ["nnpdf"]
+constraints = ["dis", "vrap"] # integrability + positivity
+complete = ["yadism", "eko", "nnpdf"]
 
 [tool.poetry.group.docs]
 optional = true
@@ -61,13 +62,6 @@ optional = true
 pytest = "^7.1.3"
 pytest-cov = "^4.0.0"
 pylint = "^2.11.1"
-
-[tool.poetry.group.dev]
-optional = true
-
-[tool.poetry.group.dev.dependencies]
-pdbpp = "^0.10.3"
-ipython = "^8.0"
 
 [tool.poetry.scripts]
 pinefarm = "pinefarm:command"
@@ -123,3 +117,6 @@ max-line-length = 100
 
 [tool.pylint.design]
 max-args = 10
+
+[tool.pydocstyle]
+add_ignore = ['D401', 'D107', 'D105']
