--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -13,17 +13,13 @@ build:
   jobs:
     post_create_environment:
       - pip install poetry
-      - poetry config virtualenvs.create false
     post_install:
-      - poetry install --with docs
+      - VIRTUAL_ENV=$READTHEDOCS_VIRTUALENV_PATH poetry install --with docs
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
   configuration: docs/source/conf.py
 
-# Optionally build your docs in additional formats such as PDF
-formats:
-- pdf
 
 # Optionally set requirements required to build your docs
 # python:
