small changes to the nnlojet part

--- a/extras/theories/theory_nnlo.yaml
+++ b/extras/theories/theory_nnlo.yaml
@@ -1,44 +1,44 @@
 ID: NNLO
 Comments: Example of NNLO theory
-CKM: 0.97428 0.22530 0.003470 0.22520 0.97345 0.041000 0.00862 0.04030 0.999152
+CKM: 0.97367 0.22431 3.82e-3 0.221 0.975 41.1e-3 8.6e-3 41.5e-3 1.010
 DAMP: 0
 EScaleVar: 1
 FNS: FONLL-C
-GF: 1.1663787e-05
+GF: 1.1663788e-5
 HQ: POLE
 IC: 1
 IB: 0
 MP: 0.938
-MW: 80.398
-MZ: 91.1876
+MZ: 91.1880
+MW: 80.3692
 MaxNfAs: 5
 MaxNfPdf: 5
-ModEv: TRN
+ModEv: EXA
+IterEv: 60
 ModSV: expanded
 NfFF: 4
 PTO: 2
 Q0: 1.65
 QED: 0
-Qedref: 1.777
-Qmb: 4.92
-Qmc: 1.51
-Qmt: 172.5
-Qref: 91.2
-SIN2TW: 0.23126
+Qedref: 91.1880
+Qref: 91.1880
+alphas: 0.118
+alphaqed: 0.0075700
+SIN2TW: 0.22348
 SxOrd: LL
 SxRes: 0
 TMC: 1
 XIF: 1.0
 XIR: 1.0
-alphaqed: 0.007496252
-alphas: 0.118
 global_nx: 0
-kbThr: 1.0
+mc: 1.502
+Qmc: 1.502
 kcThr: 1.0
-ktThr: 1.0
-mb: 4.92
-mc: 1.51
+mb: 4.936
+Qmb: 4.936
+kbThr: 1.0
 mt: 172.5
+Qmt: 172.5
 nfref: null
 nf0: null
 fact_to_ren_scale_ratio: 1.0
