--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -40,7 +40,7 @@ repos:
       - id: pydocstyle
         files: ^src/
         additional_dependencies:
-          - toml
+          - tomli
   - repo: https://github.com/pre-commit/pre-commit
     rev: v4.3.0
     hooks:
