Revert "Deactivate pylint"
This reverts commit 3cd4325db55073a792324e5bad61b8bdb3b06e9d.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,7 +79,7 @@ files = ["pinefarm/__init__.py"]
 test = "pytest"
 coverage = "$BROWSER htmlcov/index.html"
 test-cov = ["test", "coverage"]
-lint = "echo 'Skip pylint'" # "pylint pinefarm -E"
+lint = "pylint pinefarm -E"
 lint-warnings = "pylint pinefarm --exit-zero"
 ipy = "ipython"
 test-mg5 = "pinefarm run TEST_RUN_SH theories/theory_213.yaml"
