--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ pineappl = "^1.0"
 more-itertools = "^8.10.0"
 appdirs = "^1.4.4"
 tomli = "^2.0.1"
-nnpdf-data = { version = "0.0.3" }
+nnpdf-data = { version = "^4.1.1" }
 yadism = { extras = ["box"], version = "^0.13.7", optional=true, markers = "python_version < '3.13'" }
 eko = { extras = ["box"], version = "^0.14.2", optional=true, markers = "python_version < '3.13'" }
 
